@@ -16,4 +16,4 @@ application/logs/*
 !application/logs/.htaccess
 /vendor/
 /nbproject/private/
-
+/tests/reports/
