@@ -1,0 +1,3 @@
+language: php
+php:
+ - '7.0'
