@@ -18,6 +18,9 @@
             <directory>./tests/</directory>
         </testsuite>
     </testsuites>
+    <logging>
+        <log type="testdox-html" target="./tests/reports/testLog.html">
+    </logging>
     <filter>
         <whitelist>
             <directory>./system/</directory>
